#
# $Id$
#
# Copyright (c) 2011 Scyphus Solutions Co. Ltd.  All rights reserved.
# Authors:
#      Hirochika Asai  <asai@scyphus.co.jp>
#

bin_PROGRAMS = vxlan
vxlan_SOURCES = main.c fdb.c hash.c iftap.c net.c vxlan.c common.h fdb.h hash.h \
	iftap.h net.h error.c error.h vxlan.h

vxlan_LDFLAGS = -lpthread

CLEANFILES = *~
